hide register link on mobile - fixes #47

--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -44,4 +44,11 @@ header {
     right: 0;
     z-index: 5;
   }
+
+  @include breakpoint($mobile-only) {
+    // Hide register link so that the menu fits on the same line as search. 
+    .menu-item:first-child {
+      @include element-invisible;
+    }
+  }
 }
